--- a/client/marketplace/marketplace.less
+++ b/client/marketplace/marketplace.less
@@ -2,161 +2,13 @@
 @import (reference) '../lib/mixins.import.less';
 
 .marketplace-view {
-  width: 100%;
-  height: auto;
+  .jumbotron {
+    position: relative;
+    margin-bottom: 0;
 
-  @media (min-width: 700px) {
-    height: 100%;
-    width: auto;
-  }
-
-  .box {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: 100%;
-    width: 100%;
-    overflow: auto;
-
-    > .item {
-      flex-grow: 1;
-      flex-shrink: 0;
-      padding: @grid-gutter-width / 2;
-
-      .item-header {
-        padding: @grid-gutter-width / 2 0;
-
-        .seller {
-          .clearfix();
-
-          .avatar {
-            height: 40px;
-            width: 40px;
-            border-radius: 100%;
-            .shadow-z(0);
-            overflow: hidden;
-            float: left;
-            margin-right: 5px;
-
-            img {
-              display: block;
-              height: 100%;
-              width: 100%;
-            }
-
-            .no-avatar {
-              height: 100%;
-              width: 100%;
-              display: block;
-              line-height: 40px;
-              text-align: center;
-              font-size: 40px;
-              color: white;
-              background: darken(@brand-primary, 5%);
-            }
-          }
-
-          .actions {
-            .btn-group {
-              margin: 0;
-              .shadow-z(0);
-              .btn {
-                width: 32px;
-                padding: 6px;
-              }
-              &:hover,
-              &:focus,
-              &.focus,
-              &:active,
-              &.active {
-                .shadow-z(0);
-              }
-            }
-          }
-        }
-      }
-
-      .item-body {
-        background: white;
-        .shadow-z(1);
-        border-radius: @border-radius-base;
-        overflow: hidden;
-
-        .item-images {
-          min-height: 70px;
-          img {
-            display: block;
-            height: 100%;
-            width: 100%;
-          }
-        }
-
-        .item-action {
-          margin: -28px auto 6px;
-          width: 56px;
-        }
-
-        .item-info {
-          text-align: center;
-          padding: @grid-gutter-width / 2;
-
-          .item-actions {
-            .btn-group {
-              .shadow-z(0);
-              margin: @grid-gutter-width / 2 0 0 0;
-
-              &:hover,
-              &:focus,
-              &.focus,
-              &:active,
-              &.active {
-                .shadow-z(0);
-              }
-            }
-          }
-        }
-      }
-    }
-
-    @media (min-width: (600px + @grid-gutter-width)) {
-      flex-direction: column;
-      flex-wrap: wrap;
-      justify-content: flex-start;
-      align-items: flex-start;
-      align-content: flex-start;
-
-      .item {
-        flex-grow: 0;
-
-        .item-body {
-          .clearfix();
-          width: 600px;
-
-          .item-images {
-            float: left;
-
-            img {
-              height: 300px;
-              width: 300px;
-            }
-          }
-
-          .item-action {
-            float: left;
-            margin: 122px -28px 122px -28px;
-            z-index: 10;
-            position: relative;
-          }
-
-          .item-info {
-            width: 300px;
-            height: 300px;
-            margin: 0;
-            float: left;
-            overflow: auto;
-          }
-        }
-      }
+    .sell-button-partial {
+      position: absolute;
+      bottom: -28px;
     }
   }
 }
