--- a/client/layouts/toolbar/toolbar.less
+++ b/client/layouts/toolbar/toolbar.less
@@ -8,4 +8,22 @@
   &.navbar-raised {
     .shadow-z(1);
   }
+
+  .logo {
+    position: absolute;
+    left: 50%;
+    padding: 8px;
+    margin: 0 -24px;
+    z-index: 100;
+
+    .icon-logo {
+      height: 32px;
+      width: 32px;
+      display: block;
+
+      polygon {
+        fill: white;
+      }
+    }
+  }
 }
