--- a/client/products/view/images/images.html
+++ b/client/products/view/images/images.html
@@ -1,7 +1,7 @@
 <template name="marketplaceProductsViewImages">
     <div class="images">
         {{ #each images }}
-        <img src="{{ url }}" />
+        <img src="{{ url store='xl' }}" />
         {{ /each }}
     </div>
 </template>
