--- a/client/partials/product_card/product_card.html
+++ b/client/partials/product_card/product_card.html
@@ -3,7 +3,7 @@
         <div class="image">
             <a href="{{pathFor route='products.view' data=this }}">
                 {{ #with image }}
-                    <img src="{{ url store='l' }}" />
+                    <img src="{{ url store='l' auth=false }}" />
                 {{ /with }}
             </a>
         </div>
