--- a/client/layouts/menu/menu.html
+++ b/client/layouts/menu/menu.html
@@ -35,6 +35,9 @@
                             <button class="btn btn-facebook btn-block facebookBtn">
                                 Sign in with Facebook
                             </button>
+                            <button class="btn btn-default btn-block paypalBtn">
+                                Sign in with PayPal
+                            </button>
                         </div>
                     {{ /if }}
                 </div>
