--- a/client/orders/view/details/details.html
+++ b/client/orders/view/details/details.html
@@ -17,6 +17,7 @@
                 {{ /with }}
             </i>
             <button class="btn btn-primary btn-block payWithPayPalBtn" data-generating-text="Generating invoice..." data-redirecting-text="Redirecting to PayPal...">Pay with PayPal</button>
+            {{ status }}
         </div>
     </div>
 </template>
