views refactoring - loading view

--- a/client/views/loading/loading.less
+++ b/client/views/loading/loading.less
@@ -1,6 +1,6 @@
 @import (reference) '../../lib/variables.import.less';
 
-section#loading {
+.loading-view {
   .wrapper {
     position: absolute;
     top: 50%;
