--- a/client/views/loading/loading.html
+++ b/client/views/loading/loading.html
@@ -1,5 +1,5 @@
-<template name="loading">
-    <section id="loading">
+<template name="loadingView">
+    <section class="loading-view">
         <div class="wrapper">
             <svg class="loader" height="20px" width="70px" viewBox="0 0 70 20">
                 <circle r="4" cy="10" cx="10" ></circle>
