views refactoring - product editing view

--- a/client/views/products/edit/edit.html
+++ b/client/views/products/edit/edit.html
@@ -1,5 +1,5 @@
-<template name="managementProductsEdit">
-    <div class="management-products-edit">
+<template name="productEditView">
+    <div class="product-edit-view">
         <a href="{{pathFor route='shops.edit' data=shop }}" class="backBtn btn btn-icon">
             {{> iconBack }}
         </a>
