--- a/client/views/products/edit/images/images.less
+++ b/client/views/products/edit/images/images.less
@@ -1,6 +1,6 @@
-@import (reference) '../../../../../lib/variables.import.less';
+@import (reference) '../../../../lib/variables.import.less';
 
-.management-products-edit {
+.product-edit-view {
   .images {
     background: @brand-primary;
     width: 100%;
