views refactoring - orders list view

--- a/client/views/orders/list/list.html
+++ b/client/views/orders/list/list.html
@@ -1,4 +1,4 @@
-<template name="ordersList">
+<template name="ordersListView">
     <div class="orders-list-view">
         <div class="container-fluid">
             <h2 class="page-header">Orders</h2>
