views refactoring - order view

--- a/client/views/orders/view/details/details.less
+++ b/client/views/orders/view/details/details.less
@@ -1,6 +1,6 @@
 @import (reference) '../../../../lib/variables.import.less';
 
-.orders-view {
+.order-view {
   .details {
     .logo {
       height: 75px;
