--- a/client/views/orders/view/items/items.less
+++ b/client/views/orders/view/items/items.less
@@ -1,7 +1,7 @@
 @import (reference) '../../../../lib/variables.import.less';
 @import (reference) '../../../../lib/mixins.import.less';
 
-.orders-view {
+.order-view {
   .items {
     .item {
       .clearfix();
