--- a/client/views/orders/view/view.html
+++ b/client/views/orders/view/view.html
@@ -1,5 +1,5 @@
-<template name="ordersView">
-    <div class="orders-view">
+<template name="orderView">
+    <div class="order-view">
         {{ #with order }}
             {{> ordersViewDetails }}
             {{> ordersViewItems }}
