views refactoring - pages views

--- a/client/views/policy/policy.html
+++ b/client/views/policy/policy.html
@@ -1,4 +1,4 @@
-<template name="policy">
+<template name="policyView">
     <div class="policy-view">
         <div class="jumbotron">
             <div class="container">
