--- a/client/views/terms/terms.html
+++ b/client/views/terms/terms.html
@@ -1,4 +1,4 @@
-<template name="terms">
+<template name="termsView">
     <div class="terms-view">
         <div class="jumbotron">
             <div class="container">
