views refactoring - my products view

--- a/client/views/products/my/my.html
+++ b/client/views/products/my/my.html
@@ -1,5 +1,5 @@
-<template name="myProductsView">
-    <div class="my-products-view">
+<template name="productsMyView">
+    <div class="products-my-view">
         <div class="jumbotron">
             <div class="container-fluid">
                 <h1>My Products</h1>
