--- a/client/views/products/my/my.less
+++ b/client/views/products/my/my.less
@@ -1,7 +1,7 @@
 @import (reference) '../../../lib/variables.import.less';
 @import (reference) '../../../lib/mixins.import.less';
 
-.my-products-view {
+.products-my-view {
   .jumbotron {
     margin-bottom: 0;
   }
