views refactoring - product view

--- a/client/views/products/view/images/images.less
+++ b/client/views/products/view/images/images.less
@@ -1,6 +1,6 @@
 @import (reference) '../../../../lib/variables.import.less';
 
-.marketplace-products-view {
+.product-view {
   .images {
     background: darken(@brand-primary, 15%);
     width: 100%;
