--- a/client/views/products/view/other/other.less
+++ b/client/views/products/view/other/other.less
@@ -1,7 +1,7 @@
 @import (reference) '../../../../lib/variables.import.less';
 @import (reference) '../../../../lib/mixins.import.less';
 
-.marketplace-products-view {
+.product-view {
   .other {
     padding: @grid-gutter-width/2;
 
