--- a/client/views/products/view/view.html
+++ b/client/views/products/view/view.html
@@ -1,5 +1,5 @@
-<template name="marketplaceProductsView">
-    <div class="marketplace-products-view">
+<template name="productView">
+    <div class="product-view">
         {{ #with product }}
 
             {{ #if imageIds }}
