--- a/client/views/products/view/details/details.less
+++ b/client/views/products/view/details/details.less
@@ -1,7 +1,7 @@
 @import (reference) '../../../../lib/variables.import.less';
 @import (reference) '../../../../lib/mixins.import.less';
 
-.marketplace-products-view {
+.product-view {
   .details {
     background: @brand-primary;
     color: white;
