--- a/client/views/products/view/view.less
+++ b/client/views/products/view/view.less
@@ -1,6 +1,6 @@
 @import (reference) '../../../lib/variables.import.less';
 
-.marketplace-products-view {
+.product-view {
 
   .btn.btn-icon.backBtn {
     position: absolute;
