views refactoring - profile view

--- a/client/views/profile/profile.html
+++ b/client/views/profile/profile.html
@@ -1,4 +1,4 @@
-<template name="profile">
+<template name="profileView">
     <div class="profile-view">
         <div class="jumbotron">
             <div class="container">
