views refactoring - splash view

--- a/client/views/splash/splash.less
+++ b/client/views/splash/splash.less
@@ -1,7 +1,7 @@
 @import (reference) '../../lib/variables.import.less';
 @import (reference) '../../lib/mixins.import.less';
 
-#splash {
+.splash-view {
   background: @brand-primary;
   position: fixed;
   top: 0;
