--- a/client/views/splash/splash.html
+++ b/client/views/splash/splash.html
@@ -1,5 +1,5 @@
-<template name="splash">
-    <section id="splash">
+<template name="splashView">
+    <section class="splash-view">
         <div class="wrapper">
             <svg class="logo" width="160px" height="91px" viewbox="0 0 160 91">
                 <polygon points="0,0 0,22.36067977 20,32.36067977 20,10 "></polygon><polygon points="25,12.5 25,34.86067977 45,44.86067977 45,22.5 "></polygon><polygon points="50.59016994,25.29508497 80,40 160,0 160,22.36067977 80,62.36067977 50.59016994,47.65576475 "></polygon><polygon points="0,27.95084972 0,50.31152949 20,60.31152949 20,37.95084972 "></polygon><polygon points="25,40.45084972 25,62.81152949 45,72.81152949 45,50.45084972 "></polygon><polygon points="50.59016994,53.24593469 80,67.95084972 160,27.95084972 160,50.31152949 80,90.31152949 50.59016994,75.60661447 "></polygon>
