--- a/client/views/sell/sell.html
+++ b/client/views/sell/sell.html
@@ -19,7 +19,7 @@
                 <div class="form-group">
                     <div class="togglebutton togglebutton-facebook">
                         <label>
-                            <input type="checkbox" name="shareOnFacebook"> Share on Facebook
+                            <input type="checkbox" name="shareOnFacebook" checked={{shareSalesOnFacebook}} /> Share on Facebook
                         </label>
                     </div>
                 </div>
