--- a/client/views/products/view/other/other.html
+++ b/client/views/products/view/other/other.html
@@ -17,7 +17,7 @@
         <div class="row">
             {{ #each products }}
                 <div class="col-xs-6 col-sm-4">
-                    <a class="product-card" href="{{pathFor route='products.view' data=this }}">
+                    <a class="product-card" href="{{pathFor route='product' data=this }}">
                         {{ #if image }}
                             <img src="{{ image.url }}" />
                         {{ /if }}
