--- a/client/partials/product_card/product_card.html
+++ b/client/partials/product_card/product_card.html
@@ -1,7 +1,7 @@
 <template name="productCardPartial">
     <div class="product-card-partial">
         <div class="image">
-            <a href="{{pathFor route='products.view' data=this }}">
+            <a href="{{pathFor route='product' data=this }}">
                 {{ #with image }}
                     <img src="{{ url store='l' auth=false }}" />
                 {{ /with }}
@@ -9,7 +9,7 @@
         </div>
         <div class="action">
             {{ #if isMy }}
-                <a href="{{pathFor route='products.view' data=this }}" class="btn btn-fab btn-raised btn-material-deeporange editBtn">
+                <a href="{{pathFor route='product' data=this }}" class="btn btn-fab btn-raised btn-material-deeporange editBtn">
                     <i class="mdi-content-create"></i>
                 </a>
             {{ else }}
