--- a/client/views/products/edit/edit.less
+++ b/client/views/products/edit/edit.less
@@ -1,9 +1,8 @@
-.product-edit-view {
-  position: relative;
+@import (reference) '../../../lib/variables.import.less';
+@import (reference) '../../../lib/mixins.import.less';
 
-  .btn.btn-icon.backBtn {
-    position: absolute;
-    z-index: 10;
-    display: block;
-  }
+.product-edit-view {
+  @import 'images/images.import.less';
+  @import 'general/general.import.less';
+  @import 'remove/remove.import.less';
 }
