--- a/client/views/products/edit/images/images.html
+++ b/client/views/products/edit/images/images.html
@@ -1,5 +1,5 @@
-<template name="managementProductsEditImages">
-    <div class="images">
+<template name="productEditImagesBlock">
+    <div class="images-block">
         <div class="viewState">
             <nav class="context-buttons">
                 <button class="uploadBtn btn btn-icon">
