--- a/client/views/products/edit/remove/remove.html
+++ b/client/views/products/edit/remove/remove.html
@@ -1,6 +1,10 @@
-<template name="managementProductsEditRemove">
-    <div class="remove">
-        <p class="text-danger">{{_ "management.product.edit.remove.help"}}</p>
-        <button class="removeBtn btn btn-danger">{{_ "management.product.edit.remove.removeBtn.label"}}</button>
+<template name="productEditRemoveBlock">
+    <div class="remove-block">
+        <div class="container">
+            <div class="well well-danger">
+                <p>{{_ "management.product.edit.remove.help"}}</p>
+                <button class="removeBtn btn btn-default">{{_ "management.product.edit.remove.removeBtn.label"}}</button>
+            </div>
+        </div>
     </div>
 </template>
