--- a/client/views/products/edit/general/general.html
+++ b/client/views/products/edit/general/general.html
@@ -2,7 +2,7 @@
     <div class="general-block">
         <div class="container">
             <div class="well">
-                {{#autoForm collection="Products" doc=this id="productEditGeneralForm" type="update" autosave=true}}
+                {{#autoForm collection="Products" doc=this id="productEditGeneralForm" type="update"}}
                     <fieldset>
                         <legend>Product info</legend>
                         {{> afQuickField name='imageIds' type="mcImages"}}
@@ -10,6 +10,7 @@
                         {{> afQuickField name='description' rows=6}}
                         {{> afQuickField name='price'}}
                     </fieldset>
+                    <button type="submit" class="btn btn-primary">Save</button>
                 {{/autoForm}}
             </div>
         </div>
