--- a/client/views/products/edit/general/general.html
+++ b/client/views/products/edit/general/general.html
@@ -10,7 +10,8 @@
                         {{> afQuickField name='description' rows=6}}
                         {{> afQuickField name='price'}}
                     </fieldset>
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <hr>
+                    <button type="submit" class="btn btn-primary">Update</button>
                 {{/autoForm}}
             </div>
         </div>
