products  view update

--- a/client/views/products/view/details/details.html
+++ b/client/views/products/view/details/details.html
@@ -1,5 +1,5 @@
-<template name="marketplaceProductsViewDetails">
-    <div class="details">
+<template name="productViewDetailsBlock">
+    <div class="details-block">
         <h1 class="title">
             {{ title }}
             {{ #if subtitle }}
