--- a/client/views/products/view/images/images.html
+++ b/client/views/products/view/images/images.html
@@ -1,5 +1,5 @@
-<template name="marketplaceProductsViewImages">
-    <div class="images">
+<template name="productViewImagesBlock">
+    <div class="images-block">
         {{ #each images }}
         <img src="{{ url store='xl' auth=false }}" />
         {{ /each }}
