--- a/client/views/products/view/details/details.html
+++ b/client/views/products/view/details/details.html
@@ -1,30 +1,32 @@
 <template name="productViewDetailsBlock">
     <div class="details-block">
-        <h1 class="title">
-            {{ title }}
-            {{ #if subtitle }}
-                <span class="subtitle">
-                / {{ subtitle }}
-                </span>
+        {{ #with product }}
+            <h1 class="title">
+                {{ title }}
+                {{ #if subtitle }}
+                    <span class="subtitle">
+                    / {{ subtitle }}
+                    </span>
+                {{ /if }}
+            </h1>
+            <div class="price-info">
+                <span class="price pull-left">{{ currency price }}</span>
+                <span class="availability pull-right">{{ availability }}</span>
+            </div>
+            <div class="description">
+                {{ #each paragraphs description }}
+                    <p>{{this}}</p>
+                {{ /each }}
+            </div>
+            {{ #if inCart }}
+                <button class="btn btn-white btn-block btn-lg showCartBtn">
+                    In cart
+                </button>
+            {{ else }}
+                <button class="btn btn-white btn-block btn-lg buyBtn">
+                    {{_ "marketplace.products.view.details.buyBtn.text"}}
+                </button>
             {{ /if }}
-        </h1>
-        <div class="price-info">
-            <span class="price pull-left">{{ currency price }}</span>
-            <span class="availability pull-right">{{ availability }}</span>
-        </div>
-        <div class="description">
-            {{ #each paragraphs description }}
-                <p>{{this}}</p>
-            {{ /each }}
-        </div>
-        {{ #if inCart }}
-            <button class="btn btn-white btn-block btn-lg showCartBtn">
-                In cart
-            </button>
-        {{ else }}
-            <button class="btn btn-white btn-block btn-lg buyBtn">
-                {{_ "marketplace.products.view.details.buyBtn.text"}}
-            </button>
-        {{ /if }}
+        {{ /with }}
     </div>
 </template>
