--- a/client/views/products/view/images/images.html
+++ b/client/views/products/view/images/images.html
@@ -1,7 +1,21 @@
 <template name="productViewImagesBlock">
     <div class="images-block">
-        {{ #each images }}
-        <img src="{{ url store='xl' auth=false }}" />
-        {{ /each }}
+        <div id="product-images-carousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+                {{ #each images }}
+                    <div class="item">
+                        <img src="{{ url store='xl' auth=false }}" />
+                    </div>
+                {{ /each }}
+            </div>
+            <a class="left carousel-control" href="#product-images-carousel" role="button" data-slide="prev">
+                <span class="mdi-navigation-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#product-images-carousel" role="button" data-slide="next">
+                <span class="mdi-navigation-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </div>
 </template>
