product buy view update

--- a/client/views/products/view/view.less
+++ b/client/views/products/view/view.less
@@ -3,6 +3,7 @@
 
 .product-view {
   @import 'details/details.import.less';
+  @import 'buy/buy.import.less';
   @import 'images/images.import.less';
 
   .well {
