--- a/client/views/products/view/view.html
+++ b/client/views/products/view/view.html
@@ -3,6 +3,7 @@
         <div class="container">
                 <div class="well">
                     {{> productViewImagesBlock }}
+                    {{> productViewBuyBlock }}
                     {{> productViewDetailsBlock }}
                 </div>
         </div>
