--- a/client/main.less
+++ b/client/main.less
@@ -45,3 +45,20 @@ body .jumbotron {
   border-radius: 0;
   padding: @grid-gutter-width 0;
 }
+
+body {
+  #PPDGFrame {
+    .panel {
+      box-shadow: none;
+      background: transparent;
+      border-radius: 0;
+      border: none;
+      transition: none;
+      margin: 0;
+    }
+
+    .mask {
+      opacity: 0.3;
+    }
+  }
+}
