products list partial

--- a/client/partials/products_list/products_list.less
+++ b/client/partials/products_list/products_list.less
@@ -2,11 +2,8 @@
 @import (reference) '../../lib/mixins.import.less';
 
 .products-list-partial {
-  > .box {
-    > .item {
-      padding: @grid-gutter-width / 2;
-      width: 300px + @grid-gutter-width;
-      margin: 0 auto;
-    }
+  margin-top: @grid-gutter-width / 2;
+  .item {
+    margin-bottom: @grid-gutter-width / 2;
   }
 }
