--- a/client/views/products/my/my.html
+++ b/client/views/products/my/my.html
@@ -1,7 +1,7 @@
 <template name="productsMyView">
     <div class="products-my-view">
         <div class="jumbotron">
-            <div class="container-fluid">
+            <div class="container">
                 <h1>My Products</h1>
             </div>
         </div>
