--- a/client/partials/product_card/product_card.html
+++ b/client/partials/product_card/product_card.html
@@ -9,7 +9,7 @@
         </div>
         <div class="action">
             {{ #if isMy }}
-                <a href="{{pathFor route='product' data=this }}" class="btn btn-fab btn-raised btn-material-deeporange editBtn">
+                <a href="{{pathFor route='product' data=this }}" class="btn btn-fab btn-raised btn-primary editBtn">
                     <i class="mdi-content-create"></i>
                 </a>
             {{ else }}
