--- a/client/partials/products_list/products_list.html
+++ b/client/partials/products_list/products_list.html
@@ -1,14 +1,18 @@
 <template name="productsListPartial">
     <div class="products-list-partial">
-        <div class="box">
-            {{ #each products }}
-                <div class="item">
-                    {{ #with seller }}
-                        {{> productSellerPartial }}
-                    {{ /with }}
-                    {{> productCardPartial }}
-                </div>
-            {{ /each }}
+        <div class="container">
+            <div class="row">
+                {{ #each products }}
+                    <div class="col-lg-3 col-md-4 col-sm-6">
+                        <div class="item">
+                            {{ #with seller }}
+                                {{> productSellerPartial }}
+                            {{ /with }}
+                            {{> productCardPartial }}
+                        </div>
+                    </div>
+                {{ /each }}
+            </div>
         </div>
     </div>
 </template>
