--- a/client/views/marketplace/marketplace.html
+++ b/client/views/marketplace/marketplace.html
@@ -1,7 +1,7 @@
 <template name="marketplaceView">
     <div class="marketplace-view">
         <div class="jumbotron">
-            <div class="container-fluid">
+            <div class="container">
                 <h1>Marketplace</h1>
             </div>
         </div>
