--- a/client/partials/product_card/product_card.html
+++ b/client/partials/product_card/product_card.html
@@ -1,7 +1,7 @@
 <template name="productCardPartial">
     <div class="product-card-partial">
-        <div class="image">
-            <a href="{{pathFor route='product' data=this }}">
+        <div class="image-wrapper">
+            <a class="image-holder" href="{{pathFor route='product' data=this }}">
                 {{ #with image }}
                     <img src="{{ url store='l' auth=false }}" />
                 {{ /with }}
