--- a/client/lib/menu.less
+++ b/client/lib/menu.less
@@ -1,5 +1,5 @@
-@import (reference) '../lib/variables.import.less';
-@import (reference) '../lib/mixins.import.less';
+@import (reference) 'variables.import.less';
+@import (reference) 'mixins.import.less';
 
 .modal {
 
