--- a/client/layouts/main/toolbar/toolbar.less
+++ b/client/layouts/main/toolbar/toolbar.less
@@ -1,5 +1,5 @@
-@import (reference) '../../lib/variables.import.less';
-@import (reference) '../../lib/mixins.import.less';
+@import (reference) '../../../lib/variables.import.less';
+@import (reference) '../../../lib/mixins.import.less';
 
 #mainToolbar {
   transition: box-shadow @transition-duration-base @transition-timing-function-base;
