load more marketplace

--- a/client/partials/products_list/products_list.html
+++ b/client/partials/products_list/products_list.html
@@ -13,6 +13,14 @@
                     </div>
                 {{ /each }}
             </div>
+
+            {{#if nextPath}}
+                <a class="btn btn-primary btn-flat btn-block" href="{{nextPath}}">Load more</a>
+            {{else}}
+                {{#unless ready}}
+                    loading...
+                {{/unless}}
+            {{/if}}
         </div>
     </div>
 </template>
