iron-router-progress

--- a/client/lib/iron_router_progress.less
+++ b/client/lib/iron_router_progress.less
@@ -3,7 +3,7 @@
 
 #iron-router-progress {
 
-  background-color: @deeppurple;
+  background-color: @deeporange;
   height: 1px;
   top: @navbar-height;
   box-shadow: none;
