--- a/client/lib/iron_router_progress.less
+++ b/client/lib/iron_router_progress.less
@@ -3,9 +3,8 @@
 
 #iron-router-progress {
 
-  background-color: @deeporange;
+  background-color: fadeout(white, 10%);
   height: 1px;
-  top: @navbar-height;
-  box-shadow: none;
-  z-index: @zindex-navbar-fixed;
+  box-shadow: 0 0 4px fadeout(white, 10%);
+  z-index: @zindex-navbar-fixed + 1;
 }
