iron-router-progress

--- a/client/lib/iron_router_progress.less
+++ b/client/lib/iron_router_progress.less
@@ -3,8 +3,8 @@
 
 #iron-router-progress {
 
-  background-color: fadeout(white, 10%);
+  background-color: fadeout(white, 25%);
   height: 2px;
-  box-shadow: 0 0 4px fadeout(white, 10%);
+  box-shadow: none;
   z-index: @zindex-navbar-fixed + 1;
 }
