--- a/client/views/products/edit/general/general.html
+++ b/client/views/products/edit/general/general.html
@@ -9,6 +9,7 @@
                         {{> afQuickField name='title'}}
                         {{> afQuickField name='description' rows=6}}
                         {{> afQuickField name='price'}}
+                        {{> afQuickField name='inventory.available'}}
                     </fieldset>
                     <hr>
                     <button type="submit" class="btn btn-primary">Update</button>
