--- a/client/views/sell/sell.html
+++ b/client/views/sell/sell.html
@@ -14,6 +14,7 @@
                         {{> afQuickField name='title'}}
                         {{> afQuickField name='description' rows=6}}
                         {{> afQuickField name='price'}}
+                        {{> afQuickField name='inventory.available'}}
                     </fieldset>
                 {{/autoForm}}
                 <div class="form-group">
