--- a/client/views/products/edit/general/general.html
+++ b/client/views/products/edit/general/general.html
@@ -15,6 +15,16 @@
                     <button type="submit" class="btn btn-primary">Update</button>
                 {{/autoForm}}
             </div>
+            <div class="well">
+                <dl class="dl-horizontal">
+                    <dt>Available</dt>
+                    <dd>{{ inventory.available }}</dd>
+                    <dt>Reserved</dt>
+                    <dd>{{ inventory.reserved }}</dd>
+                    <dt>Sold</dt>
+                    <dd>{{ inventory.sold }}</dd>
+                </dl>
+            </div>
         </div>
     </div>
 </template>
