--- a/client/views/orders/view/details/details.html
+++ b/client/views/orders/view/details/details.html
@@ -11,6 +11,7 @@
             {{ /if }}
             <div>
                 {{ status }}
+                Expires in {{ expiresIn }}
             </div>
         </div>
     </div>
