--- a/client/views/marketplace/marketplace.html
+++ b/client/views/marketplace/marketplace.html
@@ -19,9 +19,11 @@
         </div>
         {{> productsListPartial products}}
 
-        <div class="container">
-            <button type="button" class="btn btn-primary btn-flat btn-block btnMore" disabled="{{loading}}">Show more</button>
-        </div>
+        {{#if hasMore }}
+            <div class="container">
+                <button type="button" class="btn btn-primary btn-flat btn-block btnMore" disabled="{{loading}}">Show more</button>
+            </div>
+        {{/if}}
     </div>
     {{> sellButtonPartial}}
 </template>
